--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "178491d8",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a16cf528",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "4                0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8cb2a311",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "176e898c",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5b6c6c8e",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4f60bd3f",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,8 @@
     "target = 'market_value_in_eur'\n",
     "\n",
     "# Tạo dataframe gọn nhẹ\n",
-    "df_model = df[numeric_features + categorical_features_low + categorical_features_high + [target]].copy()\n",
+    "all_features = numeric_features + categorical_features_low + categorical_features_high\n",
+    "df_model = df[all_features + [target]].copy()\n",
     "\n",
     "# Xử lý nhanh các giá trị null trong cột số (nếu có) bằng 0 hoặc trung bình\n",
     "df_model[numeric_features] = df_model[numeric_features].fillna(0)\n",
@@ -1053,32 +1054,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8cae2c84",
+   "execution_count": null,
+   "id": "6c27254d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train size: (17102, 32), Test size: (4276, 32)\n"
+      "\n",
+      "Đã chuẩn bị dữ liệu catboost xong!\n",
+      "------------------------------\n"
      ]
     }
    ],
    "source": [
-    "# Tách Features (X) và Target (y)\n",
-    "X = df_encoded.drop(columns=[target])\n",
-    "y = df_encoded[target]\n",
+    "train_idx, test_idx = train_test_split(df.index, test_size=0.2, random_state=42)\n",
     "\n",
-    "# 2. Chia Train/Test (80% Train, 20% Test)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# 3. Log Transform biến mục tiêu\n",
-    "# Dùng log1p (log(1+x)) để tránh lỗi log(0) và chuẩn hóa phân phối\n",
-    "y_train_log = np.log1p(y_train)\n",
-    "y_test_log = np.log1p(y_test)\n",
+    "X_train_cat = df_model.loc[train_idx, all_features]\n",
+    "y_train     = np.log1p(df_model.loc[train_idx, target])\n",
     "\n",
-    "print(f\"Train size: {X_train.shape}, Test size: {X_test.shape}\")"
+    "X_test_cat  = df_model.loc[test_idx, all_features] # Đã sửa lỗi thừa train_idx\n",
+    "y_test      = np.log1p(df_model.loc[test_idx, target])\n",
+    "\n",
+    "# Lưu file CatBoost \n",
+    "train_cat_full = X_train_cat.copy()\n",
+    "train_cat_full['market_value_log'] = y_train\n",
+    "train_cat_full.to_csv('../data/train_catboost.csv', index=False)\n",
+    "\n",
+    "test_cat_full = X_test_cat.copy()\n",
+    "test_cat_full['market_value_log'] = y_test\n",
+    "test_cat_full.to_csv('../data/test_catboost.csv', index=False)\n",
+    "\n",
+    "features_enc= [col for col in df_encoded.columns if col != target]\n",
+    "\n",
+    "X_train_enc = df_encoded.loc[train_idx, features_enc]\n",
+    "X_test_enc  = df_encoded.loc[test_idx, features_enc]\n",
+    "\n",
+    "print(\"\\nĐã chuẩn bị dữ liệu catboost xong!\")\n"
    ]
   },
   {
@@ -1215,9 +1229,9 @@
     "\n",
     "# Áp dụng hàm\n",
     "X_train_final, X_test_final = apply_target_encoding(\n",
-    "    X_train, \n",
-    "    X_test, \n",
-    "    y_train_log, \n",
+    "    X_train_enc, \n",
+    "    X_test_enc, \n",
+    "    y_train, \n",
     "    categorical_features_high\n",
     ")\n",
     "\n",
@@ -1252,10 +1266,10 @@
    "source": [
     "\n",
     "train_data = X_train_final.copy()\n",
-    "train_data['market_value_log'] = y_train_log\n",
+    "train_data['market_value_log'] = y_train\n",
     "\n",
     "test_data = X_test_final.copy()\n",
-    "test_data['market_value_log'] = y_test_log\n",
+    "test_data['market_value_log'] = y_test\n",
     "\n",
     "# Lưu ra file CSV (không lưu index để tránh cột thừa khi load lại)\n",
     "train_data.to_csv('../data/train_data_encoded.csv', index=False)\n",
