--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -1244,6 +1244,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ef8a0f1",
+   "metadata": {},
+   "source": [
+    "#### 5.2. **Random Forest**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "76298280",
