--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "9d994bd4",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1339,7 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize=(12, 6), dpi=150) # Tăng DPI để ảnh nét hơn\n",
+    "fig, ax = plt.subplots(figsize=(12, 6), dpi=150) \n",
     "\n",
     "if len(missing_data) > 0:\n",
     "    # Xác định màu sắc cho các thanh dựa trên tỷ lệ thiếu\n",
