--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -1075,7 +1075,7 @@
     "X_train_cat = df_model.loc[train_idx, all_features]\n",
     "y_train     = np.log1p(df_model.loc[train_idx, target])\n",
     "\n",
-    "X_test_cat  = df_model.loc[test_idx, all_features] # Đã sửa lỗi thừa train_idx\n",
+    "X_test_cat  = df_model.loc[test_idx, all_features] \n",
     "y_test      = np.log1p(df_model.loc[test_idx, target])\n",
     "\n",
     "# Lưu file CatBoost \n",
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "fde5260d",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1271,6 @@
     "test_data = X_test_final.copy()\n",
     "test_data['market_value_log'] = y_test\n",
     "\n",
-    "# Lưu ra file CSV (không lưu index để tránh cột thừa khi load lại)\n",
     "train_data.to_csv('../data/train_data_encoded.csv', index=False)\n",
     "test_data.to_csv('../data/test_data_encoded.csv', index=False)\n",
     "\n",
