--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -2375,7 +2375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "min_ds-env",
    "language": "python",
    "name": "python3"
   },
@@ -2389,7 +2389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
