Last check coding notebooks

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -10,18 +10,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9be8f5",
+   "id": "adb4cd5c",
    "metadata": {},
    "source": [
-    "## I. Tổng quan về dữ liệu"
+    "## 1. Tổng quan dữ liệu \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adb4cd5c",
+   "id": "5e03d3a0",
    "metadata": {},
    "source": [
-    "## 1. Thông tin cơ bản\n"
+    "### 1.1. Thông tin cơ bản"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "id": "c81e6656",
    "metadata": {},
    "source": [
-    "### 2. Ý nghĩa mỗi dòng\n",
+    "### 1.2. Ý nghĩa mỗi dòng\n",
     "Mỗi dòng là hồ sơ của một cầu thủ ở mùa giải gần nhất họ được ghi lại. "
    ]
   },
@@ -312,7 +312,7 @@
    "id": "4fa3eb41",
    "metadata": {},
    "source": [
-    "### 3. Tính toàn vẹn dữ liệu."
+    "### 1.3. Tính toàn vẹn dữ liệu."
    ]
   },
   {
@@ -355,7 +355,7 @@
    "id": "b2e0485b",
    "metadata": {},
    "source": [
-    "### 4. Kiếm kê cột\n"
+    "### 1.4. Kiếm kê cột\n"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "id": "55035876",
    "metadata": {},
    "source": [
-    "#### 4.1: Ý nghĩa từng cột\n",
+    "#### 1.4.1: Ý nghĩa từng cột\n",
     "* \"name\": Tên của cầu thủ\n",
     "* \"age_at_last_season\": Tuổi của cầu thủ tại mùa giải đó\n",
     "* \"last_season\": Mùa giải ghi nhận hồ sơ\n",
@@ -391,7 +391,7 @@
    "id": "0f7b861c",
    "metadata": {},
    "source": [
-    "#### 4.2: Kiểu dữ liệu mỗi cột"
+    "#### 1.4.2: Kiểu dữ liệu mỗi cột"
    ]
   },
   {
@@ -440,7 +440,7 @@
    "id": "d2dfbd00",
    "metadata": {},
    "source": [
-    "### 5. Phân tích biến định lượng"
+    "##  2. Phân tích biến định lượng"
    ]
   },
   {
@@ -448,7 +448,7 @@
    "id": "923adcca",
    "metadata": {},
    "source": [
-    "### 5.1: Phân tích phân phối\n",
+    "### 2.1: Phân tích phân phối\n",
     "Sử dụng hàm `describer` để xem thống kê mô tả cho các cột biến định lượng"
    ]
   },
@@ -661,7 +661,7 @@
    "id": "cb2fdf8d",
    "metadata": {},
    "source": [
-    "### 5.2: Trực quan hóa\n",
+    "### 2.2: Trực quan hóa\n",
     "Vẽ biểu đồ Histogram (để xem phân phối) và Box Plot (để xem outliers) cho từng cột số."
    ]
   },
@@ -710,7 +710,7 @@
    "id": "65ab2903",
    "metadata": {},
    "source": [
-    "# Phân tích Phân phối Dữ liệu (Univariate Analysis)\n",
+    "#### Phân tích Phân phối Dữ liệu (Univariate Analysis)\n",
     "\n",
     "Dựa trên biểu đồ Histogram và Box Plot của 10 thuộc tính, ta có những quan sát chi tiết sau:\n",
     "\n",
@@ -776,7 +776,6 @@
     "    * Box Plot gần như là một đường thẳng tại vạch 0, chỉ xuất hiện vài điểm ngoại lai đơn lẻ ở mức 1 hoặc 2 thẻ.\n",
     "    * *Lưu ý:* Biến này có phương sai (variance) rất thấp, cần cân nhắc khi chọn làm đặc trưng (feature) cho mô hình.\n",
     "\n",
-    "---\n",
     "**Tổng kết chung:** Dataset mang đặc trưng rõ rệt của dữ liệu thể thao với nhiều biến lệch phải và chứa nhiều điểm dữ liệu bằng 0. Cần chú ý xử lý ngoại lai (outliers) và chuẩn hóa dữ liệu (scaling) phù hợp trước khi xây dựng mô hình dự đoán."
    ]
   },
@@ -785,7 +784,7 @@
    "id": "5292d096",
    "metadata": {},
    "source": [
-    "### 5.3: Phân tích phạm vi và outlier\n",
+    "### 2.3: Phân tích phạm vi và outlier\n",
     "Sử dụng IQR để tính toán các giá trị ngoại lai"
    ]
   },
@@ -882,7 +881,7 @@
    "id": "deb1b315",
    "metadata": {},
    "source": [
-    "### 5.4: Kiểm tra chất lượng dữ liệu\n",
+    "### 2.4: Kiểm tra chất lượng dữ liệu\n",
     "Kiểm tra xem tỷ lệ giá trị bị thiếu và những giá trị phi lý. Những giá trị phi lý ở đây ví dụ như là tuổi âm hay những cầu thủ có chiều cao dưới 100cm. Các cầu thủ có giá trị chuyển nhượng bằng 0 hay âm cũng bị coi là phi lý."
    ]
   },
@@ -950,7 +949,7 @@
    "id": "d4fad2ae",
    "metadata": {},
    "source": [
-    "## 6. Phân tích biến phân loại"
+    "## 3. Phân tích biến phân loại"
    ]
   },
   {
@@ -958,7 +957,7 @@
    "id": "97ec02d7",
    "metadata": {},
    "source": [
-    "### 6.1: Phân phối giá trị\n",
+    "### 3.1: Phân phối giá trị\n",
     "Phân tích thống kê chi tiết số lượng giá trị và các giá trị phổ biến"
    ]
   },
@@ -1109,7 +1108,7 @@
    "id": "06d28bef",
    "metadata": {},
    "source": [
-    "### 6.3. Kiểm tra chất lượng"
+    "### 3.2. Kiểm tra chất lượng"
    ]
   },
   {
@@ -1215,7 +1214,7 @@
    "id": "32533604",
    "metadata": {},
    "source": [
-    "### 7. Phân tích Dữ liệu Khuyết thiếu (Missing Data Analysis)"
+    "## 4. Phân tích Dữ liệu Khuyết thiếu (Missing Data Analysis)"
    ]
   },
   {
@@ -1223,7 +1222,7 @@
    "id": "9b11dbe2",
    "metadata": {},
    "source": [
-    "#### 7.1. Tính toán Tỷ lệ Khuyết thiếu"
+    "### 4.1. Tính toán Tỷ lệ Khuyết thiếu"
    ]
   },
   {
@@ -1318,7 +1317,7 @@
    "id": "9b7664a9",
    "metadata": {},
    "source": [
-    "#### 7.2. Trực quan hóa Dữ liệu Khuyết thiếu"
+    "### 4.2. Trực quan hóa Dữ liệu Khuyết thiếu"
    ]
   },
   {
@@ -1387,7 +1386,7 @@
    "id": "a25ac74e",
    "metadata": {},
    "source": [
-    "### **➤ NHẬN XÉT:**\n",
+    "#### **➤ NHẬN XÉT:**\n",
     "\n",
     "#### **1. Phân tầng mức độ nghiêm trọng (Severity Stratification)**\n",
     "Biểu đồ cho thấy sự phân hóa rõ rệt về chất lượng dữ liệu giữa các thuộc tính, chia làm 3 nhóm hành động chính:\n",
@@ -1496,7 +1495,7 @@
    "id": "fc4e7941",
    "metadata": {},
    "source": [
-    "### **➤ NHẬN XÉT:**\n",
+    "#### **➤ NHẬN XÉT:**\n",
     "\n",
     "#### **1. Chất lượng dữ liệu theo nhóm thuộc tính (Attribute Clusters)**\n",
     "Biểu đồ Heatmap cho thấy một sự phân chia rõ ràng về chất lượng dữ liệu dựa trên tính chất của thông tin cầu thủ:\n",
@@ -1529,7 +1528,7 @@
    "id": "ead699b8",
    "metadata": {},
    "source": [
-    "#### 7.3. Phân tích Mẫu hình Dữ liệu Khuyết thiếu"
+    "### 4.3. Phân tích Mẫu hình Dữ liệu Khuyết thiếu"
    ]
   },
   {
@@ -1615,7 +1614,7 @@
    "id": "499c8c30",
    "metadata": {},
    "source": [
-    "### 8. Mối quan hệ và Tương quan (Relationships & Correlations)"
+    "## 5. Mối quan hệ và Tương quan (Relationships & Correlations)"
    ]
   },
   {
@@ -1633,7 +1632,7 @@
    "id": "7a321bba",
    "metadata": {},
    "source": [
-    "#### 8.1. Phân tích tương quan các biến số"
+    "### 5.1. Phân tích tương quan các biến số"
    ]
   },
   {
@@ -1685,7 +1684,7 @@
    "id": "3b6ffe18",
    "metadata": {},
    "source": [
-    "#### 8.2. Correlation Heatmap - Ma trận tương quan đầy đủ"
+    "### 5.2. Correlation Heatmap - Ma trận tương quan đầy đủ"
    ]
   },
   {
@@ -1741,7 +1740,7 @@
    "id": "13e32c28",
    "metadata": {},
    "source": [
-    "### **➤ NHẬN XÉT & PHÂN TÍCH TƯƠNG QUAN (CORRELATION ANALYSIS)**\n",
+    "#### **➤ NHẬN XÉT & PHÂN TÍCH TƯƠNG QUAN (CORRELATION ANALYSIS)**\n",
     "\n",
     "#### **1. \"End Product\" là Vua trong định giá (Market Value Drivers)**\n",
     "*   **Quan sát:** Biến `market_value_in_eur` có tương quan dương mạnh nhất với `total_goals` (**0.44**) và `total_assists` (**0.43**), cao hơn nhiều so với các yếu tố khác như `last_season` hay `height`.\n",
@@ -1773,7 +1772,7 @@
     "*   **Insight:** Điều này xác nhận rằng các biến `total_` trong biểu đồ này có khả năng là số liệu tích lũy cả sự nghiệp (*Career Stats*) chứ không phải một mùa giải. Cầu thủ càng lớn tuổi, tích lũy số phút và thẻ phạt càng nhiều.\n",
     "*   **Kết luận quan trọng:** Nếu đây là số liệu tích lũy, việc `Age` không tương quan với `Market Value` (-0.01) càng hợp lý: Một lão tướng có tổng số bàn thắng cả đời rất cao nhưng giá trị thị trường lại thấp vì sắp giải nghệ.\n",
     "\n",
-    "### **➤ KẾT LUẬN**\n",
+    "#### **➤ KẾT LUẬN**\n",
     "\n",
     "1.  **Chuyển đổi dữ liệu:** Cần tạo ra các biến **Per 90** (hiệu suất/90 phút) để loại bỏ nhiễu từ việc ra sân nhiều hay ít.\n",
     "2.  **Xử lý biến phân loại:** Không dùng Label Encoding cho Position để tính tương quan. Hãy tách data theo vị trí (ví dụ: chỉ phân tích Tiền đạo để xem mối quan hệ Goal-Value mạnh đến mức nào).\n",
@@ -1785,7 +1784,7 @@
    "id": "5f5bc917",
    "metadata": {},
    "source": [
-    "#### 8.3. Phân tích các cặp tương quan mạnh"
+    "### 5.3. Phân tích các cặp tương quan mạnh"
    ]
   },
   {
@@ -1864,7 +1863,7 @@
    "id": "bd17c95a",
    "metadata": {},
    "source": [
-    "#### 8.4. Phân tích cặp tương quan `age_at_last_season` và `market_value_in_eur`"
+    "### 5.4. Phân tích cặp tương quan `age_at_last_season` và `market_value_in_eur`"
    ]
   },
   {
@@ -1987,7 +1986,7 @@
    "id": "e4dbc066",
    "metadata": {},
    "source": [
-    "### **➤ NHẬN XÉT:**\n",
+    "#### **➤ NHẬN XÉT:**\n",
     "\n",
     "#### 1. Cạm bẫy của \"Trung bình\" và Hiện tượng Phương sai không đồng nhất (Heteroscedasticity)\n",
     "Nhìn vào vùng tuổi **17-23**, độ phân tán dữ liệu cực lớn (từ vài trăm nghìn đến gần 200 triệu Euro).\n",
@@ -2013,7 +2012,7 @@
     "*   **Góc nhìn chuyên môn:** \"Độ chín\" trong bóng đá phụ thuộc đặc thù vị trí. Tiền đạo cánh (*Winger*) dựa vào tốc độ sẽ rớt giá thê thảm sau tuổi 29 (giống đường cong trong ảnh). Tuy nhiên, Trung vệ (*CB*) hay Thủ môn (*GK*) thường đạt đỉnh giá trị muộn hơn và giữ giá lâu hơn.\n",
     "*   **Đề xuất cải thiện:** Để biểu đồ này thực sự hỗ trợ ra quyết định mua bán, chúng ta cần tách lớp (*layer*) nó ra theo từng vị trí cụ thể. Khi đó, đường Trendline màu xanh của Thủ môn chắc chắn sẽ dịch chuyển đỉnh sang phải so với Tiền đạo.\n",
     "\n",
-    "### **➤ KẾT LUẬN**\n",
+    "#### **➤ KẾT LUẬN**\n",
     "\n",
     "Biểu đồ Scatter Plot này cho thấy quy luật sinh tử của sự nghiệp cầu thủ. Nó kể câu chuyện về sự tàn khốc của thời gian và quy luật đào thải của bóng đá đỉnh cao.\n",
     "\n",
@@ -2027,7 +2026,7 @@
    "id": "08edc28a",
    "metadata": {},
    "source": [
-    "#### 8.5. Trực quan hóa và phân tích các cặp tương quan mạnh"
+    "### 5.5. Trực quan hóa và phân tích các cặp tương quan mạnh"
    ]
   },
   {
@@ -2177,7 +2176,7 @@
    "id": "dbd78d07",
    "metadata": {},
    "source": [
-    "### **➤ NHẬN XÉT**\n",
+    "#### **➤ NHẬN XÉT**\n",
     "\n",
     "#### **1. Thời gian thi đấu vs. Thẻ vàng ($r \\approx 0.75$): Chỉ số \"Thông minh\" của Hậu vệ**\n",
     "\n",
@@ -2212,7 +2211,7 @@
     "    2.  **Săn lùng:** Tìm kiếm những điểm dữ liệu nằm ở **góc trái trên** của biểu đồ (Thời gian ít, Output cao). Đó có thể là những \"Impact Subs\" (siêu dự bị) hoặc những tài năng trẻ chưa được trọng dụng đúng mức. Đây chính là những **món hời (undervalued assets)** trên thị trường chuyển nhượng mà các CLB lớn thường bỏ qua.\n",
     "\n",
     "\n",
-    "### **➤ TỔNG KẾT CHIẾN LƯỢC**\n",
+    "#### **➤ TỔNG KẾT CHIẾN LƯỢC**\n",
     "\n",
     "Bộ biểu đồ này cảnh báo chúng ta về **\"Bẫy của sự tích lũy\" (Accumulation Bias)**. Một cầu thủ có chỉ số tổng cao đôi khi chỉ vì anh ta là lựa chọn duy nhất và phải cày ải quá nhiều (trục hoành lớn), chứ không phải vì anh ta xuất sắc. "
    ]
@@ -2222,7 +2221,7 @@
    "id": "2d816095",
    "metadata": {},
    "source": [
-    "#### 8.6. Phân tích chéo Biến phân loại × Biến phân loại (Cross-tabulation)"
+    "### 5.6. Phân tích chéo Biến phân loại × Biến phân loại (Cross-tabulation)"
    ]
   },
   {
@@ -2302,7 +2301,7 @@
    "id": "fa632862",
    "metadata": {},
    "source": [
-    "#### 8.7. Trực quan hóa Mối quan hệ giữa các Biến phân loại"
+    "### 5.7. Trực quan hóa Mối quan hệ giữa các Biến phân loại"
    ]
   },
   {
@@ -2358,7 +2357,7 @@
    "id": "bc779433",
    "metadata": {},
    "source": [
-    "### **➤ NHẬN XÉT**\n",
+    "#### **➤ NHẬN XÉT**\n",
     "\n",
     "#### **1. \"Thuế chân trái\" (The Left-Footed Premium) ở Hàng thủ**\n",
     "*   **Quan sát:** Nhìn vào dòng `Defender` trên Heatmap, tỷ lệ cầu thủ thuận chân trái (3,408) so với chân phải (6,092) là khoảng **1:1.8**. Đây là tỷ lệ cao nhất so với các tuyến khác (Midfield là ~1:3.4, Attack là ~1:3.3).\n",
@@ -2382,7 +2381,7 @@
     "*   **Insight:** Bóng đá hiện đại ưa chuộng *Inverted Wingers* (Tiền đạo cánh nghịch chân - ví dụ Salah, Robben). Nhu cầu tìm kiếm tiền đạo chân trái đá cánh phải (*Right Winger*) luôn cao hơn nguồn cung.\n",
     "*   **Cảnh báo dữ liệu:** Khi trích xuất dữ liệu, cần kết hợp `foot` và `sub_position` (ví dụ: *Right Winger + Left Foot*). Nếu một cầu thủ thuận chân trái nhưng lại đá cánh trái (*Left Winger*), giá trị chiến thuật của họ trong lối chơi hiện đại (cần cắt vào trong sút) sẽ thấp hơn, trừ khi họ là mẫu tạt bóng cổ điển (*Crosser*).\n",
     "\n",
-    "### **➤ TỔNG KẾT & BƯỚC TIẾP THEO**\n",
+    "#### **➤ TỔNG KẾT & BƯỚC TIẾP THEO**\n",
     "\n",
     "Biểu đồ này xác nhận rằng **Chân thuận không chỉ là đặc điểm sinh học, nó là một tài sản kinh tế.**\n",
     "\n",
@@ -2401,7 +2400,7 @@
    "id": "c05ca8f7",
    "metadata": {},
    "source": [
-    "#### 8.8. Phân tích Biến số × Biến phân loại"
+    "### 5.8. Phân tích Biến số × Biến phân loại"
    ]
   },
   {
@@ -2567,7 +2566,7 @@
    "id": "579106c9",
    "metadata": {},
    "source": [
-    "#### 8.9. Trực quan hóa phân tích kết hợp: Biến số × Biến phân loại"
+    "### 5.9. Trực quan hóa phân tích kết hợp: Biến số × Biến phân loại"
    ]
   },
   {
@@ -2630,7 +2629,7 @@
    "id": "1e183758",
    "metadata": {},
    "source": [
-    "### **➤ NHẬN XÉT:**\n",
+    "#### **➤ NHẬN XÉT:**\n",
     "\n",
     "#### **1. Kiểm chứng giả thuyết \"Thủ môn già, Tiền đạo trẻ\"**\n",
     "*   **Quan sát:** Nhìn vào Bar Chart bên phải, chênh lệch giữa `Goalkeeper` (25.2) và `Attack` (24.5) chỉ là **0.7 tuổi**. Con số này trông có vẻ nhỏ, nhưng trong bóng đá đỉnh cao, đó là cả một chu kỳ.\n",
@@ -2661,7 +2660,7 @@
     "    *   **Nòng cốt (Core):** Nhóm nằm trong hộp (20-28 tuổi) để gánh vác thể lực.\n",
     "    *   **Mentors (Outliers):** Cần 1-2 cầu thủ nằm ở vùng Outlier (34+ tuổi) để làm thủ lĩnh phòng thay đồ, dù giá trị chuyển nhượng của họ gần như bằng 0. Model AI thường bỏ qua giá trị vô hình này, nhưng Giám đốc Thể thao thì không được phép.\n",
     "\n",
-    "### **➤ KẾT LUẬN**\n",
+    "#### **➤ KẾT LUẬN**\n",
     "\n",
     "Biểu đồ này là lời nhắc nhở rằng **\"Tuổi tác chỉ là con số, nhưng Vị trí thi đấu là định mệnh\"**.\n"
    ]
@@ -2671,7 +2670,7 @@
    "id": "faff47bc",
    "metadata": {},
    "source": [
-    "### 9. Các quan sát và insights (Initial Observations & Insights)"
+    "## 6. Các quan sát và insights (Initial Observations & Insights)"
    ]
   },
   {
@@ -2679,7 +2678,7 @@
    "id": "2e94cb1b",
    "metadata": {},
    "source": [
-    "#### 9.1. Tóm tắt"
+    "### 6.1. Tóm tắt"
    ]
   },
   {
@@ -2771,7 +2770,7 @@
    "id": "a0de2cd8",
    "metadata": {},
    "source": [
-    "#### 9.2. Cảnh báo về chất lượng dữ liệu (Red Flags)"
+    "### 6.2. Cảnh báo về chất lượng dữ liệu (Red Flags)"
    ]
   },
   {
